added slack new user form

--- a/Sudo/Views/Shared/_Layout.cshtml
+++ b/Sudo/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
         <div class="navigation" id="myNav">
             <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
             <a asp-area="" asp-controller="Home" asp-action="Schedule">Schedule</a>
-            <a href="https://sudosnow.slack.com/">Discussions</a>
+            <a asp-controller="Slack" asp-action="Index">Slack</a>
             <a asp-area="" asp-controller="Home" asp-action="AboutUs">About us</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
         </div>
