Sqlite Database working

--- a/Sudo/Views/Shared/_Layout.cshtml
+++ b/Sudo/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
             <a asp-area="" asp-controller="Home" asp-action="Schedule">Schedule</a>
             <a href="https://sudosnow.slack.com/">Discussions</a>
             <a asp-area="" asp-controller="Home" asp-action="AboutUs">About us</a>
+            <a asp-area="" asp-controller="Events" asp-action="Index">Event Tests</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
         </div>
     </header>
