--- a/Sudo/Views/Events/Index.cshtml
+++ b/Sudo/Views/Events/Index.cshtml
@@ -13,12 +13,6 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.ImageId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Image)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
             <th>
@@ -34,10 +28,17 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.ImageId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Image)
+            <th>
+                @if (item.Image.Length != null)
+                {
+                    @Html.DisplayNameFor(model => model.Image)
+
+                    var base64 = Convert.ToBase64String(item.Image);
+                    var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+
+                    <img src="@imgSrc" />
+                }
+            </th>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
