--- a/Sudo/Views/Events/Index.cshtml
+++ b/Sudo/Views/Events/Index.cshtml
@@ -27,6 +27,15 @@
         <div class="row">
             @foreach (var item in OrderedEvents.Where(x => x.Time.Month == groupedMonths.ElementAt(i).Key))
             {
+
+                //var imgSrc = "~/img/defaultFlag.jpg";
+
+                //if (item.Image != null)
+                //{
+                //    var base64 = Convert.ToBase64String(item.Image);
+                //    imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                //}
+
                 var base64 = Convert.ToBase64String(item.Image);
                 var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
                 DateTime date = item.Time;
@@ -34,9 +43,9 @@
                 <div class="card mb-3">
                     <img class="card-img-top" src="@imgSrc" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title"><span class="subtitle">@item.Title: </span>@item.Time.DayOfWeek, @item.Time.ToString("MMMM") @item.Time.Day - Alex Mickelson </h5>
+                        <h5 class="card-title"><span class="subtitle">@item.Title: </span>@item.Time.DayOfWeek, @item.Time.ToString("MMMM") @item.Time.Day - @item.Speaker </h5>
                         <p class="card-text">@item.Description</p>
-                        <p class="card-text"><small class="text-muted">GRSC 143 - 4:30 pm</small></p>
+                        <p class="card-text"><small class="text-muted">@item.Location - @item.Time</small></p>
                         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
                         <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                     </div>
