--- a/Sudo/Views/Shared/_Layout.cshtml
+++ b/Sudo/Views/Shared/_Layout.cshtml
@@ -63,6 +63,6 @@
     </environment>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
-    @RenderSection("Scripts", required: false)
+    @*@RenderSection("Scripts", required: false)*@
 </body>
 </html>
