Fixed css partially

--- a/Sudo/Views/Home/Index.cshtml
+++ b/Sudo/Views/Home/Index.cshtml
@@ -14,9 +14,9 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
-    <div class="carousel-inner" style=" width:100%; height: 650px !important;">
+    <div class="carousel-inner" style=" width:100%; ">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="~/img/writing4.jpg" alt="First slide">
+            <img class="imgSlider" src="~/img/writing4.jpg" alt="First slide" >
             <div id="text-strip">
                 <div class="carousel-caption">
                     <h3>Welcome to SUDO Club!</h3>
@@ -28,18 +28,18 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="~/img/writing.jpg" alt="Second slide">
+            <img  class="imgSlider" src="~/img/writing.jpg" alt="Second slide">
             <div id="text-strip">
                 <div class="carousel-caption">
                     <h3>Come join us!</h3>
                     <p>
-                        We hold meetings every week on [TBD] at 00:00 pm!
+                        We hold meetings every week on Tuesdays at 03:30 pm!
                     </p>
                 </div>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="~/img/writing4.jpg" alt="Third slide">
+            <img class="imgSlider" src="~/img/writing4.jpg" alt="Third slide">
             <div id="text-strip">
                 <div class="carousel-caption">
                     <h3>Want to get Involved?</h3>
