--- a/Sudo/Views/Events/Index.cshtml
+++ b/Sudo/Views/Events/Index.cshtml
@@ -5,7 +5,7 @@
     List<Sudo.Models.Event> OrderedEvents = new List<Sudo.Models.Event>();
 
 }
-@{ 
+@{
    OrderedEvents = Model.OrderBy(x => x.Time).ToList();
 }
 
@@ -28,16 +28,16 @@
             @foreach (var item in OrderedEvents.Where(x => x.Time.Month == groupedMonths.ElementAt(i).Key))
             {
 
-                //var imgSrc = "~/img/defaultFlag.jpg";
+                var imgSrc = "~/img/defaultFlag.jpg";
 
-                //if (item.Image != null)
-                //{
-                //    var base64 = Convert.ToBase64String(item.Image);
-                //    imgSrc = String.Format("data:image/gif;base64,{0}", base64);
-                //}
+                if (item.Image != null)
+                {
+                    var base64 = Convert.ToBase64String(item.Image);
+                    imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                }
 
-                var base64 = Convert.ToBase64String(item.Image);
-                var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                //var base64 = Convert.ToBase64String(item.Image);
+                //var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
                 DateTime date = item.Time;
 
                 <div class="card mb-3">
@@ -55,4 +55,3 @@
     }
 </div>
 
-  
