--- a/Sudo/Views/Shared/_Layout.cshtml
+++ b/Sudo/Views/Shared/_Layout.cshtml
@@ -32,10 +32,10 @@
         </div>
         <div class="navigation" id="myNav">
             <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-            <a asp-area="" asp-controller="Home" asp-action="Schedule">Schedule</a>
+            <a asp-area="" asp-controller="Events" asp-action="Index">Schedule</a>
+            @*<a asp-area="" asp-controller="Home" asp-action="Schedule">Schedule</a>*@
             <a href="https://sudosnow.slack.com/">Discussions</a>
             <a asp-area="" asp-controller="Home" asp-action="AboutUs">About us</a>
-            <a asp-area="" asp-controller="Events" asp-action="Index">Event Tests</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
         </div>
     </header>
