--- a/Sudo/Views/Shared/_Layout.cshtml
+++ b/Sudo/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
         </div>
         <div class="navigation" id="myNav">
             <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-            <a asp-area="" asp-controller="Home" asp-action="Schedule">Schedule</a>
+            @*<a asp-area="" asp-controller="Home" asp-action="Schedule">Schedule</a>*@
             <a asp-controller="Slack" asp-action="Index">Slack</a>
             <a asp-area="" asp-controller="Events" asp-action="Index">Schedule</a>
             @*<a asp-area="" asp-controller="Home" asp-action="Schedule">Schedule</a>*@
